introduce composite build for build logic