@@ -1,18 +1,6 @@
 plugins {
-    `java-library`
-    kotlin("jvm")
-}
-
-kotlin {
-    jvmToolchain {
-        languageVersion = libs.versions.java.map(JavaLanguageVersion::of)
-    }
-}
-
-java {
-    toolchain {
-        languageVersion = libs.versions.java.map(JavaLanguageVersion::of)
-    }
+    id("imdc.build.ignition-module-scope")
+    id("imdc.test.junit-tests")
 }
 
 dependencies {
@@ -20,11 +8,4 @@ dependencies {
     testImplementation(libs.ignition.common)
     testImplementation(libs.bundles.kotest)
     testImplementation(libs.mockk)
-}
-
-tasks {
-    withType<Test> {
-        useJUnitPlatform()
-        jvmArgs = listOf("--add-opens", "java.base/java.io=ALL-UNNAMED")
-    }
 }
